refactored to repeat instead of waiting an arbitrary amount of time

--- a/fn-easy.app/Contents/Info.plist
+++ b/fn-easy.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>AMStayOpen</key>
 	<false/>
 	<key>BuildMachineOSBuild</key>
-	<string>20A241123</string>
+	<string>20A241128</string>
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -34,11 +34,11 @@
 	<key>CFBundleIconFile</key>
 	<string>ApplicationStub</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.automator.fn-toggle</string>
+	<string>com.apple.automator.fn-easy</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>fn-toggle</string>
+	<string>fn-easy</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -60,11 +60,11 @@
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.1</string>
+	<string>12.2</string>
 	<key>DTSDKBuild</key>
-	<string>21C40</string>
+	<string>21D34</string>
 	<key>DTSDKName</key>
-	<string>macosx12.1.internal</string>
+	<string>macosx12.2.internal</string>
 	<key>DTXcode</key>
 	<string>1300</string>
 	<key>DTXcodeBuild</key>
